--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/slyle.css">
 </head>
 <body>
-      <header>
+      <header class="header-page">
          <nav>
              <a href="./index.html" class="logo">Web<span>Studio</span></a>
              <ul class="site-nav list">
@@ -27,7 +27,7 @@
       </header>
       <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button class="hero-link" type="button">Заказать услугу</button>
         </section>  
   
@@ -53,7 +53,7 @@
             </ul>
         </section>
              
-        <section>
+        <section class="occupation">
             <h2 class="section-title">Чем мы занимаемся</h2>
               <ul class="list">
                   <li><img src="./images/box1.jpg" alt="first" width="370" height="294"></li>
@@ -89,7 +89,6 @@
         </section>
       </main>
       
-
       <footer class="footer">
         <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
         <address class="address">
