--- a/portfolio.html
+++ b/portfolio.html
@@ -10,92 +10,97 @@
     <link rel="stylesheet" href="./css/slyle.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html" class="logo">Web<span>Studio</span></a>
-           <ul class="site-nav list">
-               <li><a href="./index.html">Студия</a></li>
-               <li><a href="">Портфолио</a></li>
-               <li><a href="">Контакты</a></li>
-           </ul>
-        </nav>
-        <ul class="contact list">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </header>
+    <header class="header-page">
+         <div class="conteiner">
+             <nav class="way">
+                  <a href="./index.html" class="logo head">Web<span>Studio</span></a>
+                  <ul class="site-nav list">
+                       <li class="items"><a href="./index.html">Студия</a></li>
+                       <li class="items"><a href="./portfolio.html">Портфолио</a></li>
+                       <li class="items"><a href="">Контакты</a></li>
+                  </ul>
+             </nav>
+                   <ul class="contact list">
+                       <li class="items"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                       <li class="items"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                  </ul>
+         </div>
+      </header>
 <main>
-    <section> 
-        <h1 hidden>Фильтра</h1>
-            <ul class="list">
-                <li><button class="button" type="button">Все</button></li>
-                <li><button class="button" type="button">Веб-сайты</button></li>
-                <li><button class="button" type="button">Приложения</button></li>
-                <li><button class="button" type="button">Дизайн</button></li>
-                <li><button class="button" type="button">Маркетинг</button></li>
+    <section class="filter"> 
+      <div class="conteiner">
+        <h1 class="visually-hidden">Фильтра</h1>
+            <ul class="filter-list">
+                <li class="items"><button class="button" type="button">Все</button></li>
+                <li class="items"><button class="button" type="button">Веб-сайты</button></li>
+                <li class="items"><button class="button" type="button">Приложения</button></li>
+                <li class="items"><button class="button" type="button">Дизайн</button></li>
+                <li class="items"><button class="button" type="button">Маркетинг</button></li>
             </ul>
 
-        <h2 hidden>Готовые проекты</h2>
-            <ul class="list">
-                <li>
+         <h2 class="visually-hidden">Готовые проекты</h2>
+            <ul class="list-project">
+                <li class="items">
                     <a href=""><img src="./images/noyt.jpg" alt="открытый ноут">
                         <h3 class="progect-title">Технокряк</h3>
                         <p class="progect-text">Веб-сайт</p></a>
                 </li>
-                <li>
+                <li class="items">
                     <a href=""><img src="./images/nba.jpg" alt="два баскетболиста борются за мяч">
                         <h3 class="progect-title">Постер New Orlean vs Golden Star</h3>
                         <p class="progect-text">Дизайн</p></a>
                 </li>
-                <li>
+                <li class="items">
                     <a href=""> <img src="./images/fish.jpg" alt="рыба и надпись">
                         <h3 class="progect-title">Ресторан Seafood</h3>
                         <p class="progect-text">Приложение</p> </a>
                 </li>
-                <li>
+                <li class="items">
                     <a href=""><img src="./images/headphone.jpg" alt="наушники">
                         <h3 class="progect-title">Проект Prime</h3>
                         <p class="progect-text">Маркетинг</p></a>
                 </li>
-                <li>
+                <li class="items">
                     <a href=""> <img src="./images/box.jpg" alt="2 коробки">
                         <h3 class="progect-title">Проект Boxes</h3>
                         <p class="progect-text">Приложение</p></a>   
                 </li>
-                <li>
+                <li class="items">
                     <a href=""><img src="./images/monitor.jpg" alt="монитор">
                         <h3 lang="eu" class="progect-title">Inspiration has no Borders</h3>
                         <p class="progect-text">Веб-сайт</p></a>
                 </li>
-                <li>
+                <li class="items">
                     <a href=""> <img src="./images/book.jpg" alt="открытая книга">
                         <h3 class="progect-title">Издание Limited Edition</h3>
                         <p class="progect-text">Дизайн</p></a>
                 </li>
-                <li>
+                <li class="items">
                     <a href=""><img src="./images/tag.jpg" alt="бирка">
                         <h3 class="progect-title">Проект LAB</h3>
                         <p class="progect-text">Маркетинг</p></a> 
                 </li>
-                <li>
+                <li class="items">
                     <a href=""><img src="./images/loptoop.jpg" alt="набирает текст с клавиатуры ноутбука">
                         <h3 lang="eu" class="progect-title">Growing Business</h3>
                         <p class="progect-text">Приложение</p></a>
                 </li>
             </ul>
-        
+       </div> 
     </section>
 </main>  
 
 <footer class="footer">
-    <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
-    <address class="address">
-        <ul class="list">
-            <li><a class="connection" href="https://goo.gl/maps/HwD9BETJEKtcqntC8">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-     </address> 
+      <div class="conteiner">   
+            <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
+            <address class="address">
+                <ul class="list">
+                    <li><a class="connection" href="https://goo.gl/maps/HwD9BETJEKtcqntC8">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address> 
+     </div>
 </footer>
 </body>
 </html>
