--- a/portfolio.html
+++ b/portfolio.html
@@ -40,47 +40,47 @@
 
          <h2 class="visually-hidden">Готовые проекты</h2>
             <ul class="list-project">
-                <li class="items">
+                <li class="items-project">
                     <a href=""><img src="./images/noyt.jpg" alt="открытый ноут">
                         <h3 class="progect-title">Технокряк</h3>
                         <p class="progect-text">Веб-сайт</p></a>
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""><img src="./images/nba.jpg" alt="два баскетболиста борются за мяч">
                         <h3 class="progect-title">Постер New Orlean vs Golden Star</h3>
                         <p class="progect-text">Дизайн</p></a>
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""> <img src="./images/fish.jpg" alt="рыба и надпись">
                         <h3 class="progect-title">Ресторан Seafood</h3>
                         <p class="progect-text">Приложение</p> </a>
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""><img src="./images/headphone.jpg" alt="наушники">
                         <h3 class="progect-title">Проект Prime</h3>
                         <p class="progect-text">Маркетинг</p></a>
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""> <img src="./images/box.jpg" alt="2 коробки">
                         <h3 class="progect-title">Проект Boxes</h3>
                         <p class="progect-text">Приложение</p></a>   
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""><img src="./images/monitor.jpg" alt="монитор">
                         <h3 lang="eu" class="progect-title">Inspiration has no Borders</h3>
                         <p class="progect-text">Веб-сайт</p></a>
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""> <img src="./images/book.jpg" alt="открытая книга">
                         <h3 class="progect-title">Издание Limited Edition</h3>
                         <p class="progect-text">Дизайн</p></a>
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""><img src="./images/tag.jpg" alt="бирка">
                         <h3 class="progect-title">Проект LAB</h3>
                         <p class="progect-text">Маркетинг</p></a> 
                 </li>
-                <li class="items">
+                <li class="items-project">
                     <a href=""><img src="./images/loptoop.jpg" alt="набирает текст с клавиатуры ноутбука">
                         <h3 lang="eu" class="progect-title">Growing Business</h3>
                         <p class="progect-text">Приложение</p></a>
