--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              <nav class="way">
                   <a href="./index.html" class="logo head">Web<span>Studio</span></a>
                   <ul class="site-nav list">
-                       <li class="items"><a href="">Студия</a></li>
+                       <li class="items"><a href=""><span class="activ-page" >Студия</span></a></li>
                        <li class="items"><a href="./portfolio.html">Портфолио</a></li>
                        <li class="items"><a href="">Контакты</a></li>
                   </ul>
@@ -28,8 +28,10 @@
       </header>
       <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-link" type="button">Заказать услугу</button>
+            <div class="conteiner">
+                 <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+                 <button class="hero-link" type="button">Заказать услугу</button>
+            </div>
         </section>  
   
         <section class="warranty">
