--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
                   <a href="./index.html" class="logo head">Web<span>Studio</span></a>
                   <ul class="site-nav list">
                        <li class="items"><a href="./index.html">Студия</a></li>
-                       <li class="items"><a href="./portfolio.html">Портфолио</a></li>
+                       <li class="items"><a href="./portfolio.html"><span class="activ-page" >Портфолио</span></a></li>
                        <li class="items"><a href="">Контакты</a></li>
                   </ul>
              </nav>
