--- a/portfolio.html
+++ b/portfolio.html
@@ -92,12 +92,12 @@
 
 <footer class="footer">
       <div class="conteiner">   
-            <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
+            <a href="./index.html" class="logo-footer">Web<span class="studio">Studio</span></a>
             <address class="address">
                 <ul class="list">
                     <li><a class="connection" href="https://goo.gl/maps/HwD9BETJEKtcqntC8">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li><a class="mobile" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address> 
      </div>
